2005-08-12  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-volume.c: (bacon_volume_scale_new):
	  Fix scrolling over widget (ported from Totem).

2005-08-12  Ross Burton  <ross@burtonini.com>

	* src/sj-play.[ch]:
	New function to reset the interface to Stop mode without actually
	changing the pipeline.

	* src/sj-main.c:
	Call function when the disk is ejected.

	This is required as cdparanoia doesn't tell us when the drive is
	ejected, and stopping the pipeline causes a deadlock. Very sad.
	
2005-08-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-volume.c: (bacon_volume_button_new),
	(bacon_volume_scale_value_changed):
	* src/bacon-volume.h:
	* src/sj-main.c: (sj_make_volume_button):
	  Update for varying icon sizes (needed in Rhythmbox); doesn't
	  actually change anything in practice.

2005-08-09  Ross Burton  <ross@burtonini.com>

	* autogen.sh:
	Use automake 1.9 like all the cool kids.

	* Makefile.am:
	Don't dist m4/.

2005-08-09  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Versoin 2.11.91.

2005-08-08  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on gnome-media 2.11.91 for the Profiles dialog fix.

2005-08-07  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-volume.c: (bacon_volume_button_press):
	  Fix small flickering when popping up window, or at least fix it
	  so that you don't actually notice (#312165).

2005-08-07  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (idle_state):
	  When stopped, remove the time / total message from the statusbar.

2005-08-03  Madhan Raj M  <madhanrm@gnome.org>

	* src/sj-play.c:
	Disable Reread while playing.

2005-08-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/Makefile.am:
	* src/bacon-volume.c: (bacon_volume_button_get_type),
	(bacon_volume_button_class_init), (bacon_volume_button_init),
	(bacon_volume_button_dispose), (bacon_volume_button_new),