@@ -15,7 +15,7 @@ Version: 2.12
 Status: Incomplete
 ?>
 
-<article id="index" lang="en" xmlns:xi="http://www.w3.org/2001/XInclude">
+<article id="index" lang="en">
   <articleinfo>
     <title>&application; Manual</title>
     
@@ -32,7 +32,7 @@ Status: Incomplete
       <publishername>GNOME Documentation Project</publishername>
     </publisher>
 
-    <xi:include href="legal.xml"/>
+    <include href="legal.xml" xmlns="http://www.w3.org/2001/XInclude"/>
 
     <authorgroup>
       <author>
@@ -321,6 +321,6 @@ Status: Incomplete
     </section>
   </section>
 
-  <xi:include href="fdl-appendix.xml"/>
+  <include href="fdl-appendix.xml" xmlns="http://www.w3.org/2001/XInclude"/>
   
 </article>
