@@ -1,3 +1,9 @@
+2005-08-18  Ross Burton  <ross@burtonini.com>
+
+	* help/sound-juicer/C/sound-juicer.xml:
+	Move the namespace declarations to their usage so libxml strips
+	them, thus letting distcheck pass.
+
 2005-08-12  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/bacon-volume.c: (bacon_volume_scale_new):
